manifest.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: web1
  labels:
    role: web1
spec:
  containers:
    - name: web
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: web1
  name: web1
spec:
  type: NodePort
  selector:
    role: web1
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: web2
  labels:
    role: web2
spec:
  containers:
    - name: web
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: web2
  name: web2
spec:
  type: NodePort
  selector:
    role: web2
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: web3
  labels:
    role: web3
spec:
  containers:
    - name: web
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: web3
  name: web3
spec:
  type: NodePort
  selector:
    role: web3
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-web1
spec:
  podSelector:
    matchLabels:
      role: web1
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: web2
  egress:
    - to:
        - podSelector:
            matchLabels:
              role: web3
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-web2
spec:
  podSelector:
    matchLabels:
      role: web2
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              role: web1
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-access
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
